# tasks_itk

./: 1_attribute.py  1_decorator.py  1_redis.py  1_singleton.py  2_search.py  3_asyncHTTP.py  6_WSGI.py  http_redis.py  pyproject.toml  qwe.py  redis_queue.py  url.json
4_generate/: factorial.py  futures_processpool.py  generate.py  main.py  multi_pool.py  multi_process_queue.py  parent_process.py
