[project]
name = "my_project"
version = "0.1.0"
dependencies = [
    "ruff>=0.12.0",
]

[tool.ruff]
# Основные настройки
line-length = 88          
select = [              
  "E",   # Ошибки (Indent, Syntax)
  "F",   # Код-стайл (пробелы, отступы)
  "W",   # Предупреждения
  "I",   # Неправильные импорты
  "UP",  # Совместимость с Python 3.10+
  "PL",  # Лучшие практики (Best Practices)
]
ignore = ["E501"]         

# Настройки форматирования (аналог `black`)
[tool.ruff.format]
quote-style = "double"   
indent-style = "space"           
skip-magic-trailing-comma = false  

# Игнорировать файлы/папки
exclude = [
  ".venv",
  "__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  "migrations",
  "tests",
]
