[project]
name = "my_project"
version = "0.1.0"
dependencies = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88          
select = [              
  "E",
  "F",
  "W",
  "I", 
  "UP", 
  "PL",  
]
ignore = ["E501"]         


[tool.ruff.format]
quote-style = "double"   
indent-style = "space"           
skip-magic-trailing-comma = false  


exclude = [
  ".venv",
  "__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  "migrations",
  "tests",
]
